--- a/src/app/components/all-todos/all-todos.component.html
+++ b/src/app/components/all-todos/all-todos.component.html
@@ -1,5 +1,20 @@
-<h1>{{error}}</h1>
+<div class="addTodosContainer">
+    <form (ngSubmit)="addTodo(addTodos.value)">
+      <div class="form-floating mb-3">
+        <input class="form-control w100" type="text" #addTodos id="addTodos" name="addtodos" placeholder="Add Todo" required>
+        <label for="addTodos">Add Todo</label>
+      </div>
+      <button type="submit" class="btn btn-primary">Add</button>
+    </form>
+  </div>
+
+
+
+
+<h1 *ngIf="error">{{error}}</h1>
 <div *ngFor="let todo of todos">
     <input type="checkbox" [checked]="todo.checked">
     {{ todo.title }}
 </div>
+
+
