--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,5 +1,13 @@
-<form (ngSubmit)="login()">
-    <input type="text" name="username" [(ngModel)]="username" required>
-    <input type="password" name="password" [(ngModel)]="password" required>
-    <button class="button">Login</button>
-</form>
+<div class="loginContent">
+    <form (ngSubmit)="login()">
+        <div class="form-floating mb-3">
+            <input class="form-control" type="text" id="userName" name="username" placeholder="Username" [(ngModel)]="username" required>
+            <label for="userName">Username</label>
+        </div>
+        <div class="form-floating mb-3">
+            <input class="form-control" type="password" id="passWord" placeholder="password"  name="password" [(ngModel)]="password" required>
+            <label for="passWord" >password</label>
+            </div>
+        <button class="button btn btn-primary">Login</button>
+    </form>
+</div>
