--- a/src/app/components/all-todos/all-todos.component.scss
+++ b/src/app/components/all-todos/all-todos.component.scss
@@ -1,6 +1,15 @@
 .addTodosContainer {
-
+position: relative;
+bottom: 0;
 }
+
+.todosContainer {
+    background-color: rgba($color: #000000, $alpha: 0.2);
+    margin-top: 16px;
+    padding: 16px;
+    border-radius:4px;
+    border: 1px solid rgb(0, 0, 0);
+}   
 
 .fieldButtonContainer {
     display: flex;
@@ -10,4 +19,9 @@
 
 .w100 {
     width: 100%;
+}
+
+.icon {
+   border-radius:50%;
+   margin-left: 16px;
 }
